--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.12",
+    "@fortawesome/free-solid-svg-icons": "^5.6.3",
+    "@fortawesome/vue-fontawesome": "^0.1.5",
+    "i": "^0.3.6",
+    "npm": "^6.6.0",
     "tachyons": "^4.11.1",
     "vue": "^2.5.21",
     "vue-markdown": "^2.2.4",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-select": "^2.5.1",
+    "vue-simplemde": "^0.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
