--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-markdown": "^2.2.4",
     "vue-router": "^3.0.1",
     "vue-select": "^2.5.1",
-    "vue-simplemde": "^0.5.1"
+    "vue-simplemde": "^0.5.1",
+    "vuex": "^3.1.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.3.0",
