--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.5",
     "i": "^0.3.6",
+    "lodash": "^4.17.11",
     "npm": "^6.6.0",
     "tachyons": "^4.11.1",
     "vue": "^2.5.21",
