--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.12",
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "@fortawesome/vue-fontawesome": "^0.1.5",
+    "babel-runtime": "^6.26.0",
     "i": "^0.3.6",
     "lodash": "^4.17.11",
     "npm": "^6.6.0",
+    "sweetalert2": "^8.0.0",
     "tachyons": "^4.11.1",
     "vue": "^2.5.21",
     "vue-markdown": "^2.2.4",
