--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-router": "^3.0.1",
     "vue-select": "^2.5.1",
     "vue-simplemde": "^0.5.1",
+    "vue2vis": "0.0.16",
     "vuex": "^3.1.0"
   },
   "devDependencies": {
